--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="mediaquerry.css">
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mediaquerry.css">
+    <link rel="shortcut icon" href="imagens/haltere.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/0f8b34bf1d.js" crossorigin="anonymous"></script>
 
     <title>Infinity</title>
