--- a/index.html
+++ b/index.html
@@ -4,43 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="imagens/haltere.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/mediaquerry.css">
-    <link rel="shortcut icon" href="imagens/haltere.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/0f8b34bf1d.js" crossorigin="anonymous"></script>
-
-    <title>Infinity</title>
+    <title>InfinityAcademy</title>
 </head>
 <body>
     <header>
         <div>
-            <h1>InfinityAcademy</h1>
+            <h1>Infinity Academy</h1>
         </div>
+
         <nav>
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Serviços</a></li>
-                <li><a href="">Aulas</a></li>
-                <li><a href="">Agenda</a></li>
-                <li><a href="">Contatos</a></li>
-                <li><a href=""><i class="fa-brands fa-facebook-f"></i></a><li>
-                <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">serviços</a></li>
+                <li><a href="#">aulas</a></li>
+                <li><a href="#">agenda</a></li>
+                <li><a href="#">contatos</a></li>
+                <li class="icons"><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                <li class="icons"><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <div class="container">
-            <div class="content">
-                <h1>Malhar não fica mais fácil, <br> você que fica melhor!</h1>
-                <p>Se inscreva agora e mude de vida</p>
+        <main>
+            <div class="container">
+                <div class="content">
+                    <h1>Malhar não fica mais fácil, <br> você que fica melhor!</h1>
+                    <p>se inscreva agora e mude de vida</p>
+                </div>
+                <div class="buttons">
+                    <button>agendar aula experimental</button>
+                    <button>contactar personal trainer</button>
+                </div>
             </div>
-        </div>
-        <div class="button-menu">
-            <div class="buttons">
-                <button>Agendar Aula <br>Experimental</button>
-                <button>Contactar <br>personal trainer</button>
-            </div>
-        </div>
-    </main>
+        </main>
 </body>
 </html>
